--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="images/B3.png" alt="TEA" width="1100" height="600">
+      <img src="images/B4.jpg" alt="TEA" width="1100" height="600">
       <div class="carousel-caption">
         <h3>CONTENT</h3>
         <H5>CHAPTER 1 </H5>
@@ -125,7 +125,7 @@
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="images/B3.PNG" alt="New York" width="1100" height="600">
+      <img src="images/B7.jpg" alt="New York" width="1100" height="600">
       <div class="carousel-caption">
         <P>In the light of second wave of feminist movement, “The Feminine Mystique”, a landmark book by feminist Betty Friedan published in 1963 that described the pervasive dissatisfaction among women in conventional American society in the post-World War II period. She coined the term feminine mystique to describe the societal assumption that women could find fulfilment through housework, marriage, sexual passivity, and child nurture alone. Further, prevailing attitudes held that “truly feminine” women had no desire for higher education, careers, or a political voice; rather, they found complete fulfilment in the domestic sphere. Friedan, however, noted that many housewives were unsatisfied with their lives but had difficulty articulating their feelings. Friedan deemed that unhappiness and inability to live up to the feminine mystique the “problem that has no name.” This study explores Friedan’s notion of “Feminine mystique” in The Story of an Hour by Kate Chopin.</P>
         <H3>Statement of the Problem</H3>
@@ -136,7 +136,7 @@
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="images/B4.jpg" alt="New York" width="1100" height="600">
+      <img src="images/a2.jpg" alt="New York" width="1100" height="600">
       <div class="carousel-caption">
         <h3>Research Question</h3>
         <p>The Research question of the study is;</p>
@@ -221,7 +221,7 @@
          </div>   
     </div>
     <div class="carousel-item">
-      <img src="images/B3.PNG" alt="New York" width="1100" height="600">
+      <img src="images/a2.jpg" alt="New York" width="1100" height="600">
       <div class="carousel-caption">
         <h3></h3>
         <p>This statement makes it seem that Mrs. Mallard had previously made excuses for her husband’s behaviour perhaps for her own sake, so she did not have to face her dissatisfaction with her marriage. She seems generally disinterested in the institution of marriage regardless of if her husband was a good or bad man. Being widowed was one of the only ways to escape society’s expectation of marriage at that time. </p>
@@ -234,7 +234,7 @@
       </div>   
     </div>
      <div class="carousel-item">
-      <img src="images/B3.PNG" alt="New York" width="1100" height="700">
+      <img src="images/b7.jpg" alt="New York" width="1100" height="700">
       <div class="carousel-caption">
         <h3><U>CHAPTER 5</U></h3>
         <H3>Conclusion</H3>
